# promptr

./: .env.example  .gitignore  .npmrc  AGENTS.md  Dockerfile  Makefile  README.md  auth.ts  db.ts  docker-compose.yml  middleware.ts  next.config.js  package.json  pnpm-lock.yaml  progress.md  system-design-enhancement-plan.md  tailwind.config.ts  tsconfig.json  vercel.json
.github/workflows/: backend.yml  frontend.yml
backend/: Dockerfile  Makefile  app.py  build.sh  config.py  main.py  pyproject.toml  requirements.txt  start.sh
backend/core/: config.py  db.py
backend/knowledge-base/: prompt-engineering-guide.md
backend/routers/: agents.py  analysis.py  battle.py  profile.py
backend/schemas/: agent.py  analysis.py  battle.py  user.py
backend/services/: agent_service.py  battle_service.py  gemini_service.py  llm_service.py
backend/tests/: conftest.py  test_agents.py  test_analysis.py  test_battle.py  test_profile.py  test_services.py
prisma/: schema.prisma  seed.ts
server/: Dockerfile  Makefile  app.py  config.py  pyproject.toml  pytest.ini  requirements.txt
server/core/: db.py  middleware.py  rate_limit.py  security.py
server/migrations/: env.py
server/migrations/versions/: bd36f4ae558d_remove_learning_style.py  efd72ac925a3_initial_postgresql_schema.py
server/models/: __init__.py  user.py
server/prompts/: analysis.py  evaluation.py  problems.py  scenario.py
server/routers/: agents.py  analysis.py  profile.py
server/routers/auth/: __init__.py  credentials.py  oauth.py  users.py
server/schemas/: agent.py  analysis.py  auth.py  models.py  user.py
server/services/: agent_prompts.py  agent_service.py  llm_service.py  llm_utils.py  redis.py
server/tests/: conftest.py  test_agents.py  test_analysis.py  test_profile.py  test_services.py
src/: env.js
src/__tests__/: seo.test.ts
src/actions/: auth.ts
src/api/: modules.ts
src/app/: layout.tsx  page.tsx  robots.ts  sitemap.ts
src/components/: AgentLanding.tsx  AuthButton.tsx  AuthShell.tsx  CTASection.tsx  FAQSection.tsx  FeaturesSection.tsx  Footer.tsx  Header.tsx  HeroSection.tsx  HowItWorksSection.tsx  LogOut.tsx  LoginGithub.tsx  LoginGoogle.tsx  MaxWidthWrapper.tsx  NewScenarioModal.tsx  PricingSection.tsx  PromptrLogo.tsx  StatsSection.tsx  TestimonialsSection.tsx  UserMenu.tsx  problem-description.tsx  problem-sidebar.tsx  (+1 more)
web/: Dockerfile  auth.ts  middleware.ts  next.config.js  package.json  postcss.config.cjs  vitest.config.ts
(+179 files in other folders)
