[project]
name = "backend"
version = "0.1.0"
description = "Promptr FastAPI backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "openai>=2.33.0",
    "python-dotenv>=1.2.2",
    "slowapi>=0.1.9",
    "uvicorn>=0.46.0",
]

[project.scripts]
promptr-api = "uvicorn:main"

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "ruff>=0.15.12",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
