[project]
name = "server"
version = "0.1.0"
description = "Promptr FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "authlib>=1.3.1",
    "fastapi[standard]>=0.136.1",
    "greenlet>=3.5.1",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "loguru>=0.7.2",
    "openai>=2.33.0",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.8.0",
    "python-dotenv>=1.2.2",
    "redis>=5.0.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.30",
    "uvicorn>=0.46.0",
]

[project.scripts]
promptr-api = "uvicorn:main"

[tool.vercel]
entrypoint = "app:app"

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "ruff>=0.15.12",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "mongomock>=4.3.0",
    "mongomock-motor>=0.0.35",
]
